force-app/main/default/objects/Shipment__c/Shipment__c.object-meta.xml
<CustomObject>
    <description>Merchant&apos;s point of view</description>
    <label>Shipment</label>
    <nameField>
        <label>Container list № (e.g. MBL)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>