force-app/main/default/objects/Shipment__c/fields/Cargo_description__c.field-meta.xml
<CustomField>
    <fullName>Cargo_description__c</fullName>
    <label>Cargo description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>