force-app/main/default/objects/Shipment__c/fields/Checklist__c.field-meta.xml
<CustomField>
    <fullName>Checklist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Checklist</label>
    <referenceTo>Packing_checklist__c</referenceTo>
    <relationshipLabel>Shipments</relationshipLabel>
    <relationshipName>Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>