force-app/main/default/objects/Shipment__c/fields/Checklist_done__c.field-meta.xml
<CustomField>
    <fullName>Checklist_done__c</fullName>
    <formula>IF(PICKLISTCOUNT( Checklist__r.Stages_completion__c ) = 7, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>True when all checklist items have value</inlineHelpText>
    <label>Checklist done</label>
    <type>Checkbox</type>
</CustomField>