force-app/main/default/objects/Shipment__c/fields/Checklist_status__c.field-meta.xml
<CustomField>
    <fullName>Checklist_status__c</fullName>
    <formula>IF( Checklist__r.Contains_NO__c, &quot;&apos;NO&apos; answer(s)&quot;,  
IF( Checklist__r.ChecklitsDone__c , &quot;Done&quot;, &quot;Pending&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Checklist status</label>
    <type>Text</type>
</CustomField>