force-app/main/default/objects/Shipment__c/fields/Consignee__c.field-meta.xml
<CustomField>
    <fullName>Consignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consignee</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Shipments (Consignee)</relationshipLabel>
    <relationshipName>Shipments1</relationshipName>
    <type>Lookup</type>
</CustomField>