force-app/main/default/objects/Shipment__c/fields/Container__c.field-meta.xml
<CustomField>
    <fullName>Container__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Container</label>
    <referenceTo>Freight_Container__c</referenceTo>
    <relationshipLabel>Shipments</relationshipLabel>
    <relationshipName>Shipments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>