force-app/main/default/objects/Shipment__c/fields/Dangerous_goods__c.field-meta.xml
<CustomField>
    <fullName>Dangerous_goods__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dangerous goods</label>
    <type>Checkbox</type>
</CustomField>