force-app/main/default/objects/Shipment__c/fields/Estimated_Time_of_Departure__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Time_of_Departure__c</fullName>
    <label>Estimated Time of Departure</label>
    <type>DateTime</type>
</CustomField>