force-app/main/default/objects/Shipment__c/fields/FCL_LCL__c.field-meta.xml
<CustomField>
    <fullName>FCL_LCL__c</fullName>
    <label>FCL/LCL</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FCL</fullName>
            </value>
            <value>
                <fullName>LCL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>