force-app/main/default/objects/Shipment__c/fields/Freight_Container__c.field-meta.xml
<CustomField>
    <fullName>Freight_Container__c</fullName>
    <label>Freight Container</label>
    <referenceTo>Freight_Container__c</referenceTo>
    <relationshipLabel>Shipments</relationshipLabel>
    <relationshipName>Shipments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>