force-app/main/default/objects/Shipment__c/fields/Master_Bill_of_Lading__c.field-meta.xml
<CustomField>
    <fullName>Master_Bill_of_Lading__c</fullName>
    <inlineHelpText>Or another document with a list of freight containers</inlineHelpText>
    <label>Master Bill of Lading</label>
    <length>30</length>
    <type>Text</type>
</CustomField>