force-app/main/default/objects/Shipment__c/fields/NOT_Dangerous__c.field-meta.xml
<CustomField>
    <fullName>NOT_Dangerous__c</fullName>
    <defaultValue>true</defaultValue>
    <label>NOT Dangerous</label>
    <type>Checkbox</type>
</CustomField>