force-app/main/default/objects/Shipment__c/fields/Shipper__c.field-meta.xml
<CustomField>
    <fullName>Shipper__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipper</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Shipments</relationshipLabel>
    <relationshipName>Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>